<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_learn"
        android:icon="@drawable/ic_nav_learn"
        android:title="@string/nav_learn" />
    <item
        android:id="@+id/navigation_arena"
        android:icon="@drawable/ic_nav_arena"
        android:title="@string/nav_arena" />
    <item
        android:id="@+id/navigation_rank"
        android:icon="@drawable/ic_nav_rank"
        android:title="@string/nav_rank" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
